--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,10 @@ eureka:
     fetch-registry: false
     serviceUrl:
       defaultZone:  http://localhost:8888/eureka/
-
+  instance:
+    prefer-ip-address: true
+  server:
+    enableSelfPreservation: false
 
 
 
